--- a/Supervised Learning - Project.ipynb
+++ b/Supervised Learning - Project.ipynb
@@ -484,9 +484,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5702ddcf",
+   "metadata": {},
+   "source": [
+    "# Part III : Training ML Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e49c211",
+   "id": "c7a3190a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f2158ef",
+   "id": "9c85b881",
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "773949f2",
+   "id": "d53e0047",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b86c276e",
+   "id": "ec666448",
    "metadata": {},
    "outputs": [
     {
@@ -568,11 +576,37 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "5702ddcf",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1fd1a4d2",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# Part III : Training ML Model"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import accuracy_score\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5dc996d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# setting features and targets\n",
+    "X = diabetes_df.drop(['Outcome'], axis=1)\n",
+    "y = diabetes_df['Outcome']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be991c12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, train_size=0.70, random_state=9)"
    ]
   },
   {
