build modal using decision tree

--- a/Supervised Learning - Project.ipynb
+++ b/Supervised Learning - Project.ipynb
@@ -484,14 +484,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "5702ddcf",
-   "metadata": {},
-   "source": [
-    "# Part III : Training ML Model"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c7a3190a",
@@ -607,6 +599,64 @@
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, y, train_size=0.70, random_state=9)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1d6ab39",
+   "metadata": {},
+   "source": [
+    "# Part III : Training ML Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e85c122",
+   "metadata": {},
+   "source": [
+    "### Training model with the Decision tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de189604",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "model score with gini index 0.7273\n"
+     ]
+    }
+   ],
+   "source": [
+    "clf_gini = DecisionTreeClassifier(criterion='gini', max_depth=2, random_state=9)\n",
+    "clf_gini.fit(X_train, y_train)\n",
+    "y_pred_gini = clf_gini.predict(X_test)\n",
+    "\n",
+    "print('model score with gini index {0:0.4f}'. format(accuracy_score(y_test, y_pred_gini)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c6d2dcb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "training score -  0.7597765363128491\n",
+      "testing score -  0.7272727272727273\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('training score - ', clf_gini.score(X_train,y_train))\n",
+    "print('testing score - ', clf_gini.score(X_test, y_test))"
    ]
   },
   {
