--- a/Supervised Learning - Project.ipynb
+++ b/Supervised Learning - Project.ipynb
@@ -778,6 +778,21 @@
    "source": [
     "From the machine learning models developed and the exploratory data analysis (EDA) conducted, generate four bullet points as your findings."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fa8ea82",
+   "metadata": {},
+   "source": [
+    "* It can be said that random forest method provides slightly better score than using decision tree despite some over fitting\n",
+    "\n",
+    "* Random forest modal will be able to predict accuractly on average of 74 time out of 100\n",
+    "\n",
+    "* Whereas using decision tree is able to generalize better then random forest but has slightly lower accuracy\n",
+    "\n",
+    "* Overall decision tree could be a better fit for out case since it is able to generalize better then random forestand likely to continue to be stable on unseen data\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
