--- a/Supervised Learning - Project.ipynb
+++ b/Supervised Learning - Project.ipynb
@@ -872,7 +872,7 @@
    "outputs": [],
    "source": [
     "# creating pipline to scale data and use random forest classifier\n",
-    "\n",
+    "# having 4 decision trees provides the best value for out=r case\n",
     "pipe2 = Pipeline([\n",
     "                ('scaler', RobustScaler()),\n",
     "                ('classifier', RandomForestClassifier(n_estimators=4, max_depth=5, random_state=9))\n",
@@ -937,7 +937,7 @@
     }
    ],
    "source": [
-    "print('model score with 100 decision trees is {0:0.04}'. format(accuracy_score(y_test,y_pred)))"
+    "print('model score with 4 decision trees is {0:0.04}'. format(accuracy_score(y_test,y_pred)))"
    ]
   },
   {
@@ -981,19 +981,18 @@
    "id": "6fa8ea82",
    "metadata": {},
    "source": [
-    "* It can be said that random forest method provides slightly better score than using decision tree despite some over fitting\n",
+    "* Random forest modal will be able to predict accuractly on average of 77 times out of 100.\n",
     "\n",
-    "* Random forest modal will be able to predict accuractly on average of 74 time out of 100\n",
+    "* Overall random tree could be a better fit for out case since it is able to generate better results then decision tree and it will likely continue to be stable on unseen data.\n",
     "\n",
-    "* Whereas using decision tree is able to generalize better then random forest but has slightly lower accuracy\n",
+    "* Overall the risk of diabetes increases as age increases\n",
     "\n",
-    "* Overall decision tree could be a better fit for out case since it is able to generalize better then random forestand likely to continue to be stable on unseen data\n",
-    "\n"
+    "* the risk of diabetes is also significant for overweight patients and it substantially higher for overweight and elder people"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5c518b06",
+   "id": "f17211d2",
    "metadata": {},
    "source": []
   }
